[gd_scene load_steps=3 format=3 uid="uid://cmpsaafag7cwl"]

[ext_resource type="Script" uid="uid://bcagysl3b0ncf" path="res://common/windows/graph_node_picker/graph_node_picker.gd" id="1_5oqa8"]
[ext_resource type="Script" uid="uid://dqy8aovapnh5h" path="res://common/windows/graph_node_picker/graph_node_tree.gd" id="2_5kkcj"]

[node name="GraphNodePicker" type="Window"]
auto_translate_mode = 1
title = "Create Graph Node"
position = Vector2i(0, 36)
size = Vector2i(345, 425)
transient = true
transient_to_focused = true
exclusive = true
extend_to_title = true
keep_title_visible = true
content_scale_mode = 1
script = ExtResource("1_5oqa8")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"TreeContainer"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SearchBar" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Search"

[node name="Tree" type="Tree" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_root = true
script = ExtResource("2_5kkcj")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Create"

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/SearchBar" to="PanelContainer/VBoxContainer/Tree" method="_on_search_bar_text_changed"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/Tree" to="PanelContainer/VBoxContainer/Tree" method="_on_item_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CreateButton" to="PanelContainer/VBoxContainer/Tree" method="_create"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
